// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should gather all instances into one bucket 1`] = `
<div>
  <div>
    top
  </div>
  <div>
    I
  </div>
  <div>
    have
  </div>
  <div>
    lots
  </div>
  <div>
    of
  </div>
  <div>
    bodies.
  </div>
  <div>
    bottom
  </div>
</div>
`;

exports[`it should order the elements correctly 1`] = `
<div>
  <div>
    top
  </div>
  <div>
    middle
  </div>
  <div>
    bottom
  </div>
</div>
`;

exports[`it should slot props 1`] = `
<Header>
  foo
</Header>
`;

exports[`slots using tokens it should find all the slots 1`] = `
<div>
  <div>
    top
  </div>
  <div>
    middle
  </div>
  <div>
    bottom
  </div>
</div>
`;
